--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -7,6 +7,8 @@
 	<meta name="author" content="congtrinh0209">
 	<link rel="stylesheet" type="text/css" href="../CSS/home.css">
 	<link rel="stylesheet" type="text/css" href="../css2/font-awesome.min.css">
+	<!<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap.min.css">
+	<!<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap-theme.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -55,8 +57,8 @@
 				</div>
 				<div class="menu-1024">
 					<ul>
-						<li class="item"><a href="#"><i class="fa fa-home"></i>Trang chủ</a></li>
-						<li class="item"><a href="#"><i class="fa fa-user-secret"></i>Cho thuê</a>
+						<li class="item"><a href="#"><i class="fa fa-home"></i></br>Trang chủ</a></li>
+						<li class="item"><a href="#"><i class="fa fa-user-secret"></i></br>Cho thuê</a>
 							<ul class="sub-menu">
 								<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Phòng cho thuê</a></li>
 								<li class="sub-item" id="sub2"><a href=""><i class="fa fa-bolt"></i>Nhà cho thuê</a></li>
@@ -64,12 +66,13 @@
 								<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Mặt bằng cho thuê</a></li>
 							</ul>
 						</li>
-						<li class="item"><a href="#"><i class="fa fa-binoculars"></i>Giúp tôi</a></li>
-						<li class="item"><a href="#"><i class="fa fa-users"></i>Ở ghép</a></li>
-						<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i>Tin tức</a></li>
-						<li class="item"><a href="#"><i class="fa fa-life-ring"></i>Hướng dẫn</a></li>
-						<li class="item"><a href="#"><i class="fa fa-money"></i>Nạp tiền</a></li>
-						<li class="item"><a href="#"><i class="fa fa-upload"></i>Đăng tin</a></li>
+						<li class="item"><a href="#"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
+						<li class="item"><a href="#"><i class="fa fa-users"></i></br>Ở ghép</a></li>
+						<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
+						<li class="item"><a href="#"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
+						<li class="item"><a href="#"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
+						<li class="item"><a href="#"><i class="fa fa-book"></i></br>Quản lý</a></li>
+						<li class="item"><a href="#"><i class="fa fa-money"></i></br>Nạp tiền</a></li>
 						<div class="sign">
 							<button type="button" class="sign-item"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
 							<button type="button" class="sign-item"><i class="fa fa-pencil"></i><span>Đăng ký</span></button>
@@ -80,143 +83,156 @@
 			</div>
 			
 		</div>
-		<div class="content">
-			<div id="content-left">
-				<div class="image">
-					<img src="../IMG/1.jpg">
-					<div class="icon-p">
-						<i class="fa fa-picture-o"></i>
+		<div class="wrap-content">
+			<div class="content">
+				<div id="content-left">
+					<div class="image">
+						<img src="../IMG/1.jpg">
+						<div class="icon-p">
+							<i class="fa fa-picture-o"></i>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div id="content-right">
-				<div class="content-right1">
-					<div class="item-cr1 title"><a href=""><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a></div>
-					<div class="description">
-						<p>THÔNG TIN MÔ TẢ</p>
-						<div class="item-cr1 summarize-desc"><p>Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p></div>
+				<div id="content-right">
+					<div class="content-right1">
+						<div class="item-cr1 title"><a href=""><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a></div>
+						<div class="item-cr1 summarize-desc"><p>Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p>
+						</div>
+						<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
+						<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
+						<div class="item-cr1 date"><p>Ngày đăng: 20/08/2016</p></div>
 					</div>
-					<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
-					<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
-					<div class="item-cr1 date"><p>Ngày: 20/08/2016</p></div>
-				</div>
-				<div class="content-right2">
-					<div class="price-service">
-						<p>Giá dịch vụ:</p>
-						<div class="item-cr1 water-price"><i class="fa fa-shower"></i> Giá nước: <span>25.000/m3</span></div>
-						<div class="item-cr1 electric-price"><i class="fa fa-bolt"></i> Giá điện: <span>3.500/số</span></div>
-						<div class="item-cr1 internet-price"><i class="fa fa-wifi"></i> Mạng: <span>50.000/tháng</span></div>
-						<div class="item-cr1 park-price"><i class="fa fa-motorcycle"></i> Gửi xe: <span>Free</span></div>
+					<div class="content-right2">
+						<div class="price-service">
+							<p>Giá dịch vụ:</p>
+							<div class="item-cr1 water-price"><i class="fa fa-shower"></i> Nước: <span>25.000/m3</span></div>
+							<div class="item-cr1 electric-price"><i class="fa fa-bolt"></i> Điện: <span>3.500/số</span></div>
+							<div class="item-cr1 internet-price"><i class="fa fa-wifi"></i> Mạng: <span>50.000/tháng</span></div>
+							<div class="item-cr1 park-price"><i class="fa fa-motorcycle"></i> Gửi xe: <span>Free</span></div>
+						</div>
+						<div class="item-cr1 price"><i class="fa fa-money"></i><span> Phòng: 1.5tr/tháng</span></div>
+						<div class="item-cr1 phone"><i class="fa fa-phone"></i><span> LH: 0988870225</span></div>
+						<button type="text" class="button-detail"><i class="fa fa-arrow-right"></i> Xem chi tiết</button>
 					</div>
-					<div class="item-cr1 phone"><i class="fa fa-phone"></i><span> LH: 0988870225</span></div>
-					<div class="item-cr1 price"><i class="fa fa-money"></i><span> Phòng: 1.5tr/tháng</span></div>
-					<button type="text" class="button-detail"><i class="fa fa-arrow-right"></i> Xem chi tiết</button>
-				</div>
-				<div class="clear"></div>
-			</div>
-			<div class="clear"></div>
-		</div>
-
-		<div class="content">
-			<div id="content-left">
-				<div class="image">
-					<img src="../IMG/2.jpg">
-					<div class="icon-p">
-						<i class="fa fa-picture-o"></i>
-					</div>
-				</div>
-			</div>
-			<div id="content-right">
-				<div class="content-right1">
-					<div class="item-cr1 title"><a href=""><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a></div>
-					<div class="description">
-						<p>THÔNG TIN MÔ TẢ</p>
-						<div class="item-cr1 summarize-desc"><p>Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p></div>
-					</div>
-					<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
-					<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
-					<div class="item-cr1 date"><p>Ngày: 20/08/2016</p></div>
-				</div>
-				<div class="content-right2">
-					<div class="price-service">
-						<p>Giá dịch vụ:</p>
-						<div class="item-cr1 water-price"><i class="fa fa-shower"></i> Giá nước: <span>25.000/m3</span></div>
-						<div class="item-cr1 electric-price"><i class="fa fa-bolt"></i> Giá điện: <span>3.500/số</span></div>
-						<div class="item-cr1 internet-price"><i class="fa fa-wifi"></i> Mạng: <span>50.000/tháng</span></div>
-						<div class="item-cr1 park-price"><i class="fa fa-motorcycle"></i> Gửi xe: <span>Free</span></div>
-					</div>
-					<div class="item-cr1 phone"><i class="fa fa-phone"></i><span> LH: 0988870225</span></div>
-					<div class="item-cr1 price"><i class="fa fa-money"></i><span> Phòng: 1.5 tr/tháng</span></div>
-					<button type="text" class="button-detail"><i class="fa fa-arrow-right"></i> Xem chi tiết</button>
+					<div class="clear"></div>
 				</div>
 				<div class="clear"></div>
 			</div>
-			<div class="clear"></div>
-		</div>
 
+			<div class="content">
+				<div id="content-left">
+					<div class="image">
+						<img src="../IMG/2.jpg">
+						<div class="icon-p">
+							<i class="fa fa-picture-o"></i>
+						</div>
+					</div>
+				</div>
+				<div id="content-right">
+					<div class="content-right1">
+						<div class="item-cr1 title"><a href=""><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a></div>
+						<div class="item-cr1 summarize-desc"><p>Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p>
+						</div>
+						<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
+						<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
+						<div class="item-cr1 date"><p>Ngày đăng: 20/08/2016</p></div>
+					</div>
+					<div class="content-right2">
+						<div class="price-service">
+							<p>Giá dịch vụ:</p>
+							<div class="item-cr1 water-price"><i class="fa fa-shower"></i> Nước: <span>25.000/m3</span></div>
+							<div class="item-cr1 electric-price"><i class="fa fa-bolt"></i> Điện: <span>3.500/số</span></div>
+							<div class="item-cr1 internet-price"><i class="fa fa-wifi"></i> Mạng: <span>50.000/tháng</span></div>
+							<div class="item-cr1 park-price"><i class="fa fa-motorcycle"></i> Gửi xe: <span>Free</span></div>
+						</div>
+						<div class="item-cr1 price"><i class="fa fa-money"></i><span> Phòng: 1.5 tr/tháng</span></div>
+						<div class="item-cr1 phone"><i class="fa fa-phone"></i><span> LH: 0988870225</span></div>
+						<button type="text" class="button-detail"><i class="fa fa-arrow-right"></i> Xem chi tiết</button>
+					</div>
+					<div class="clear"></div>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</div>
+		<div class="side-bar">
+			<div class="search">
+					<div class="title-side">
+						<h2>TÌM PHÒNG</h2>
+					</div>
+					<div class="row">
+						<select class="select">
+							<option>Tỉnh, TP</option>
+							<option>Hà Nội</option>
+							<option>TP.HCM</option>
+						</select>
+						<select class="select">
+							<option>Quận, Huyện</option>
+							<option>Hai Bà Trưng</option>
+							<option>Thanh Xuân</option>
+							<option>Đống Đa</option>
+							<option>Cầu Giấy</option>
+							<option>Từ Liêm</option>
+						</select>
+						<select class="select">
+							<option>Gần ĐH, CĐ</option>
+							<option>Bách Khoa</option>
+							<option>Xây Dựng</option>
+							<option>Tài chính</option>
+							<option>Ngoại thương</option>
+						</select>
+						<select class="select">
+							<option>Bạn là?</option>
+							<option>Sinh viên</option>
+							<option>Người đi làm</option>
+							<option>Kinh doanh</option>
+						</select>
+					</div>
+					<div class="row">
+						<select class="select">
+							<option>Bạn cần tìm?</option>
+							<option>Thuê phòng trọ</option>
+							<option>Thuê nhà</option>
+							<option>Chung cư mini</option>
+							<option>Mặt bằng kinh doanh</option>
+						</select>
+						<select class="select">
+							<option>Diện tích?</option>
+							<option>Dưới 15m2</option>
+							<option>15m2 - 25m2</option>
+							<option>25m2 - 35m2</option>
+							<option>Trên 35m2</option>
+						</select>
+						<select class="select">
+							<option>Mức giá?</option>
+							<option>500 - 1000</option>
+							<option>1000 - 1500</option>
+							<option>1500 - 2000</option>
+							<option>2000 - 3000</option>
+							<option>Trên 3000</option>
+						</select>
+					</div>
+					<div class="icon-s"><i class="fa fa-search"></i><span>Tìm Kiếm</span></div>
+			</div>
+			<div class="news">
+				<div class="title-side">
+					<h2>BÀI VIẾT</h2>
+				</div>
+				<div class="new-item">Chung cư mini mới xây gồm 200 phòng toàn bộ nội thất trong phòng được thiết kế bằng gỗ rất mát mẻ, sang trọng. Chính thức đưa tòa nhà vào hoạt…</div>
+				<div class="new-item">Chung cư mini mới xây gồm 200 phòng toàn bộ nội thất trong phòng được thiết kế bằng gỗ rất mát mẻ, sang trọng. Chính thức đưa tòa nhà vào hoạt…</div>
+				<div class="new-item">Chung cư mini mới xây gồm 200 phòng toàn bộ nội thất trong phòng được thiết kế bằng gỗ rất mát mẻ, sang trọng. Chính thức đưa tòa nhà vào hoạt…</div>
+				
+			</div>
+		</div>
+		<div class="clear"></div>
 
 		<div class="footer">
-			<div class="search">
-				<div class="row">
-					<select class="select">
-						<option>Tỉnh, TP</option>
-						<option>Hà Nội</option>
-						<option>TP.HCM</option>
-					</select>
-					<select class="select">
-						<option>Quận, Huyện</option>
-						<option>Hai Bà Trưng</option>
-						<option>Thanh Xuân</option>
-						<option>Đống Đa</option>
-						<option>Cầu Giấy</option>
-						<option>Từ Liêm</option>
-					</select>
-					<select class="select">
-						<option>Gần ĐH, CĐ</option>
-						<option>Bách Khoa</option>
-						<option>Xây Dựng</option>
-						<option>Tài chính</option>
-						<option>Ngoại thương</option>
-					</select>
-					<select class="select">
-						<option>Bạn là?</option>
-						<option>Sinh viên</option>
-						<option>Người đi làm</option>
-						<option>Kinh doanh</option>
-					</select>
-				</div>
-				<div class="row">
-					<select class="select">
-						<option>Bạn cần tìm?</option>
-						<option>Thuê phòng trọ</option>
-						<option>Thuê nhà</option>
-						<option>Chung cư mini</option>
-						<option>Mặt bằng kinh doanh</option>
-					</select>
-					<select class="select">
-						<option>Diện tích?</option>
-						<option>Dưới 15m2</option>
-						<option>15m2 - 25m2</option>
-						<option>25m2 - 35m2</option>
-						<option>Trên 35m2</option>
-					</select>
-					<select class="select">
-						<option>Mức giá?</option>
-						<option>500 - 1000</option>
-						<option>1000 - 1500</option>
-						<option>1500 - 2000</option>
-						<option>2000 - 3000</option>
-						<option>Trên 3000</option>
-					</select>
-				</div>
-				<div class="icon-s"><i class="fa fa-search"></i><span>Tìm Kiếm</span></div>
-			</div>
+			
 		</div>
 
 
 	</div>
 
-
+	<script src="../../bootstrap/js/bootstrap.min.js"></script>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="../JAVASCRIPT/home.js"></script>
 </body>
